fix(processes): fix process owner text overlap
related to OPT-6433

--- a/client/src/components/Processes/Processes.scss
+++ b/client/src/components/Processes/Processes.scss
@@ -78,18 +78,6 @@
       }
     }
 
-    .ownerInfo {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-
-      .ownerName {
-        max-width: 100px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-    }
-
     .setGoalBtn {
       margin: 4px;
     }
